[package]
name = "internet-hogs"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
axum = { version = "0.7" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
netflow_parser = { version = "0.4" }
prometheus-client = { version = "0.22" }
clickhouse = { version = "0.13", features = ["inserter"] }
serde = { version = "1" }
